// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContextualAlert > should match snapshot for error type 1`] = `
<div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="border-red-800 bg-red-100 flex w-full items-start gap-1 border-l-6 p-2"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-triangle-exclamation min-w-[36px] self-baseline text-red-800 fa-xl"
      data-icon="triangle-exclamation"
      data-prefix="fas"
      role="img"
      viewBox="0 0 512 512"
    >
      <path
        d="M256 0c14.7 0 28.2 8.1 35.2 21l216 400c6.7 12.4 6.4 27.4-.8 39.5S486.1 480 472 480L40 480c-14.1 0-27.2-7.4-34.4-19.5s-7.5-27.1-.8-39.5l216-400c7-12.9 20.5-21 35.2-21zm0 352a32 32 0 1 0 0 64 32 32 0 1 0 0-64zm0-192c-18.2 0-32.7 15.5-31.4 33.7l7.4 104c.9 12.5 11.4 22.3 23.9 22.3 12.6 0 23-9.7 23.9-22.3l7.4-104c1.3-18.2-13.1-33.7-31.4-33.7z"
        fill="currentColor"
      />
    </svg>
    <div
      class=""
    >
      <p>
        Error snapshot message
      </p>
    </div>
  </div>
</div>
`;

exports[`ContextualAlert > should match snapshot for info type 1`] = `
<div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="border-[#2572B4] bg-sky-100 flex w-full items-start gap-1 border-l-6 p-2"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-info min-w-[36px] self-baseline text-[#2572B4] fa-xl"
      data-icon="circle-info"
      data-prefix="fas"
      role="img"
      viewBox="0 0 512 512"
    >
      <path
        d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
        fill="currentColor"
      />
    </svg>
    <div
      class=""
    >
      <p>
        Snapshot test message
      </p>
    </div>
  </div>
</div>
`;

exports[`ContextualAlert > should match snapshot for success type 1`] = `
<div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="border-green-600 bg-green-100 flex w-full items-start gap-1 border-l-6 p-2"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-check min-w-[36px] self-baseline text-green-600 fa-xl"
      data-icon="circle-check"
      data-prefix="fas"
      role="img"
      viewBox="0 0 512 512"
    >
      <path
        d="M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zM374 145.7c-10.7-7.8-25.7-5.4-33.5 5.3L221.1 315.2 169 263.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.8 7.5 18.8 7s13.4-4.1 17.5-9.8L379.3 179.2c7.8-10.7 5.4-25.7-5.3-33.5z"
        fill="currentColor"
      />
    </svg>
    <div
      class=""
    >
      <p>
        Success snapshot message
      </p>
    </div>
  </div>
</div>
`;
